tests/NormalTests/paczka1/fuzzy1/95378620.err
Error in line 4: S980 A519 39,9
Error in line 9: S980 S980 58,8
Error in line 15: WWcch3yK A474 164,85
Error in line 12: WWcch3yK A474 83,1
Error in line 22: G70VCoL A519 96,0
Error in line 13: S980 A519 99,5
Error in line 30: qaB A474 16,8
Error in line 33: F0BB A519 58,4
